update index and css

--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
                 <p class="text-lightbrown">To receive updates about exclusive experiences, events, new
                 destinations and more, please register your interest.
                 </p>
-              <li><a class="btn btn-bayler-primary" href="#">Sign Up</a></li>
+              <li><a class="btn btn-light" href="#">Sign Up</a></li>
             </ul>
           </div>
 
